# web_homework-07

./: README.md
homework-07/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
homework-07/alembic/: env.py
homework-07/alembic/versions/: fa5dc35da321_init.py
