[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["BartoszKrus <150096024+BartoszKrus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
faker = "^25.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
